--- a/app/views/testcases/edit.html.erb
+++ b/app/views/testcases/edit.html.erb
@@ -15,7 +15,7 @@
 	  
 	  <% if @testcase.casecate == "Operation" then %>
 		<%= f.label "Execution will make what devie changed:" %>
-		<%= f.collection_select :devicetype_id, @devicetypes, :id, :name %>
+		<%= f.collection_select :devicetype_id, @devicetypes, :id, :name, {:include_blank => true} %>
 	  <% end %>
 
       <%= f.label "Execution steps:" %>
