--- a/app/views/achivements/_lead.html.erb
+++ b/app/views/achivements/_lead.html.erb
@@ -25,7 +25,9 @@
 						<% if result.testcase != nil then %>
 							<%= link_to result.testcase.name, testcase_path(result.testcase),:onclick=>"window.open(this.href,'create_company', 'height=600, width=600');return false;" %>
 						<% end %>
-						" <%= result.device.name if result.device != nil %> on server:<%= result.sysconfig.sut.name if result.sysconfig.sut != nil if result.sysconfig != nil %> <br>
+						" <%= result.device.name if result.device != nil %> on server:<%= result.sysconfig.sut.name if result.sysconfig.sut != nil if result.sysconfig != nil %> 
+						<%= link_to "view", execution_path(result),:onclick=>"window.open(this.href,'create_company', 'height=600, width=600');return false;" %>
+						<br>
 					<% end %>
 				<% end %>
 			<% end %>
