--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -7,9 +7,15 @@ function detailinfo(para1, para2) {
 <div class="row-fluid">
 	<div class="span3">
 		<h1>My Tasks</h1>
-		<%= form_tag controller: "tasks", action: "twiki" do %>
-			<%= hidden_field_tag(:selecttask, @selecttask) %>
-			<div><%= submit_tag "twiki" , :class => "submit label toright" %></div>
+		<% if current_user.lead? then %>
+			<%= form_tag controller: "tasks", action: "twiki" do %>
+				<%= hidden_field_tag(:selecttask, @selecttask) %>
+				<div><%= submit_tag "twiki" , :class => "submit label toright" %></div>
+			<% end %>
+			<%= form_tag controller: "tasks", action: "clonetask" do %>
+				<%= hidden_field_tag(:selecttask, @selecttask) %>
+				<div><%= submit_tag "clone" , :class => "submit label toright" %></div>
+			<% end %>
 		<% end %>
 	</div>
 	<div class="span3">
