add new feature, target index, caselabel

--- a/app/views/targets/edit.html.erb
+++ b/app/views/targets/edit.html.erb
@@ -6,6 +6,9 @@
 
       <%= f.label :name %>
       <%= f.text_field :name %>
+	  
+	  <%= f.label :targetindex %>
+      <%= f.text_field :targetindex %>
 
       <%= f.label :note %>
       <%= f.text_area :note, class: "editpage" %>
