add new feature, label index

--- a/app/views/testcases/_casetypes_list.html.erb
+++ b/app/views/testcases/_casetypes_list.html.erb
@@ -39,7 +39,9 @@
 	<% if @weightlist != nil then if @weightlist.count != 0 then %>
 		<% @weightlist.each do |t| %>
 			<div class="row">
-				<div class="span"><%= t.name %> - weight:<%= t.weight %></div>
+				<div class="span">
+				<%= t.labelindex %> - <%= link_to t.name, edit_caseweight_path(t), :onclick=>"window.open(this.href,'create_company', 'height=650, width=600');return false;" %> - weight:<%= t.weight %>
+				</div>
 				<%= link_to "delete", t, method: :delete, data: { confirm: "Sure?" }, class: "span toright" if current_user.root? %>
 			</div>
 		<% end %>
@@ -52,6 +54,7 @@
 <hr>
 	<%= form_tag controller: "testcases", action: "addlabel" do |t| %>
 		<div><%= text_field_tag :name,"",placeholder: "Label Name" %></div>
+		<div><%= text_field_tag :labelindex,"",placeholder: "Label Index" %></div>
 		<div><%= text_field_tag :weight,"",placeholder: "1 - 10" %></div>
 		<div><%= text_area_tag :note,"",placeholder: "Note..." %></div>
 		<div><%= submit_tag "Add Label" , :class => "submit" %></div>
