--- a/app/views/executions/show.html.erb
+++ b/app/views/executions/show.html.erb
@@ -2,7 +2,7 @@
 	<h3 class="offset1">Execution Environment</h3><hr>
 	<div class="offset1">
 		<ul>
-			<li>Test Engineer Is: <%= @execution.user.email %></li>
+			<li>Test Engineer Is: <%= @execution.user.name %></li>
 			<li>Server Under Test Is: <%= @execution.sysconfig.sut.name %></li>
 			<li>Execution Date Is: <%= @execution.created_at.to_date %></li>
 		</ul>
@@ -12,7 +12,7 @@
 		<ul>
 		<% @execution.realconfig.each do |d| %>
 		<li>
-			<%= d.devicetype.name %> - <%= d.name %>
+			<%= d.devicetype.name if d.devicetype != nil %> - <%= d.name %>
 		</li>
 		<% end %>
 		</ul>
